// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parameter Node Node component 1`] = `
<div
  className="parameter-node"
  dummy="dummyData"
>
  <span
    contentEditable={false}
  >
    undefined: 
  </span>
  <span />
</div>
`;

exports[`Parameter Node Node component with select 1`] = `
<div
  className="parameter-node"
  dummy="dummyData"
>
  <span
    contentEditable={false}
  >
    mockType: 
  </span>
  <select
    name="Select"
    onChange={[Function]}
    onClick={[Function]}
    value="Option 1"
  >
    <option
      value="Option 1"
    >
      Option 1
    </option>
    <option
      value="Option 2"
    >
      Option 2
    </option>
  </select>
</div>
`;

exports[`Parameter Node Node component with select changes value 1`] = `"<div class=\\"parameter-node\\"><span contenteditable=\\"false\\">mockType: </span><select name=\\"Select\\"><option selected=\\"\\" value=\\"Option 1\\">Option 1</option><option value=\\"Option 2\\">Option 2</option></select></div>"`;

exports[`Parameter Node oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "display": "Mock Display",
    "isSelect": false,
    "name": "mockKey",
    "options": undefined,
  },
  "nodes": Array [
    Object {
      "leaves": Array [
        Object {
          "text": "mockValue",
        },
      ],
      "object": "text",
    },
  ],
  "object": "block",
  "type": "Parameter",
}
`;

exports[`Parameter Node oboToSlate converts an OboNode to a Slate node with options 1`] = `
Object {
  "data": Object {
    "current": "mockValue",
    "display": "Mock Display",
    "isSelect": true,
    "name": "mockKey",
    "options": Array [
      "Mock Option 1",
      "Mock Option 2",
      "Mock Option 3",
    ],
  },
  "isVoid": true,
  "object": "block",
  "type": "Parameter",
}
`;

exports[`Parameter Node plugins.renderNode renders a Parameter when passed 1`] = `
<Node
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "Parameter",
    }
  }
/>
`;

exports[`Parameter Node slateToObo converts a Slate node to an OboNode 1`] = `
Object {
  "undefined": "mockValue",
}
`;

exports[`Parameter Node slateToObo converts a Slate node to an OboNode with select 1`] = `
Object {
  "undefined": undefined,
}
`;
